--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 # 前两条配置用于打印输出带参数的sql语句
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/exam38?useUnicode=true&characterEncoding=utf8
-spring.datasource.username=root
+spring.datasource.account=root
 spring.datasource.password=macroot
 mybatis.configuration.cache-enabled=false
 mybatis.configuration.map-underscore-to-camel-case=true
@@ -28,3 +28,15 @@ spring.datasource.validationQuery=select 'x'
 spring.datasource.timeBetweenEvictionRunsMills=60000
 # 空闲连接最小空闲时间
 spring.datasource.minEvictableIdleTimeMills=300000
+
+# 请求头参数
+jwt.header=Authorization
+# 请求头参数值前缀
+jwt.tokenHead=Bearer
+# jwt签名所用的密钥
+jwt.secret=#y5S-@GzS-!8YG
+# jwt token的过期设置时间，
+jwt.expiration=604800
+
+# 开启权限认证的开关
+auth.restful.enable=false
