--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8080
 # 数据库连接配置
 # 前两条配置用于打印输出带参数的sql语句
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/exam38?useUnicode=true&characterEncoding=utf8
-spring.datasource.account=root
+spring.datasource.url=jdbc:mysql://localhost:3306/pm_v1?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
 spring.datasource.password=macroot
 mybatis.configuration.cache-enabled=false
 mybatis.configuration.map-underscore-to-camel-case=true
@@ -23,7 +23,7 @@ spring.datasource.minIdle=5
 # 获取连接的最大等待时间
 spring.datasource.maxWait=10000
 # 解决mysql8小时的问题
-spring.datasource.validationQuery=select 'x'
+spring.datasource.validationQuery=query 'x'
 # 空闲连接检查时间间隔
 spring.datasource.timeBetweenEvictionRunsMills=60000
 # 空闲连接最小空闲时间
