--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/pm_v1?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=macroot
+spring.datasource.password=123456
 mybatis.configuration.cache-enabled=false
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.use-generated-keys=true
