1、创建了基本的Controller； 2、完成了文件的上传和下载功能 3、在.gitignore文件中添加了忽略upload-file的选项

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.servlet.context-path=/practice
-server.port=8080
+server.port=8088
 
 # 数据库连接配置
 # 前两条配置用于打印输出带参数的sql语句
@@ -40,3 +40,17 @@ jwt.expiration=604800
 
 # 开启权限认证的开关
 auth.restful.enable=false
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+
+## File Storage Properties
+# All files uploaded through the REST API will be stored in this directory
+file.upload-dir=./upload-files
