完善了认证的业务逻辑，具体根据学校/企业+老师/学生进行统一认证

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8088
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/pm_v1?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=macroot
 mybatis.configuration.cache-enabled=false
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.use-generated-keys=true
@@ -39,7 +39,7 @@ jwt.secret=#y5S-@GzS-!8YG
 jwt.expiration=604800
 
 # 开启权限认证的开关
-auth.restful.enable=false
+auth.restful.enable=true
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
