完成学生添加任务书以及学校和企业审核任务书的业务

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.datasource.minIdle=5
 # 获取连接的最大等待时间
 spring.datasource.maxWait=10000
 # 解决mysql8小时的问题
-spring.datasource.validationQuery=query 'x'
+spring.datasource.validationQuery=select 'x'
 # 空闲连接检查时间间隔
 spring.datasource.timeBetweenEvictionRunsMills=60000
 # 空闲连接最小空闲时间
@@ -39,7 +39,7 @@ jwt.secret=#y5S-@GzS-!8YG
 jwt.expiration=604800
 
 # 开启权限认证的开关
-auth.restful.enable=true
+auth.restful.enable=false
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
