对配置文件的参数添加了标注

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.servlet.context-path=/practice
-server.port=8088
+server.port=8080
 
-# 数据库连接配置
+
+## 数据库连接配置
 # 前两条配置用于打印输出带参数的sql语句
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/pm_v1?useUnicode=true&characterEncoding=utf8
@@ -9,15 +10,20 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 
+## Mybatis配置
+# 使全局的映射器启用或禁用缓存
 mybatis.configuration.cache-enabled=false
+# 使用驼峰命名法转换字段
 mybatis.configuration.map-underscore-to-camel-case=true
+# 允许JDBC生成主键，default:false
 mybatis.configuration.use-generated-keys=true
+# 这是默认的执行类型  （SIMPLE: 简单； REUSE: 执行器可能重复使用prepared statements语句；BATCH: 执行器可以重复执行语句和批量更新）
 mybatis.configuration.default-executor-type=reuse
 # 设置事务的超时时间
 mybatis.configuration.default-statement-timeout=600
 
 
-# 阿里druid数据源
+## 阿里druid数据源
 # 最大连接数
 spring.datasource.maxActive=30
 # 最小连接数
@@ -31,6 +37,8 @@ spring.datasource.timeBetweenEvictionRunsMillis=60000
 # 空闲连接最小空闲时间
 spring.datasource.minEvictableIdleTimeMillis=300000
 
+
+## 验证的配置
 # 请求头参数
 jwt.header=Authorization
 # 请求头参数值前缀
@@ -43,16 +51,18 @@ jwt.expiration=604800
 # 开启权限认证的开关
 auth.restful.enable=false
 
-## MULTIPART (MultipartProperties)
-# Enable multipart uploads
+
+## 上传文件的配置
+# 允许上传多个文件
 spring.servlet.multipart.enabled=true
-# Threshold after which files are written to disk.
+# 文件写入磁盘的阈值
 spring.servlet.multipart.file-size-threshold=2KB
-# Max file size.
+# 最大的文件大小.
 spring.servlet.multipart.max-file-size=200MB
-# Max Request Size
+# 最大的请求文件的大小
 spring.servlet.multipart.max-request-size=215MB
 
-## File Storage Properties
-# All files uploaded through the REST API will be stored in this directory
+
+## 文件存储配置
+# 所有通过REST Api上传的文件都会放置在配置的目录中
 file.upload-dir=./upload-files
