--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/pm_v1?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=macroot
 
 
 ## Mybatis配置
